# Architecture-De-Donnees

Project DataWarehouse/: README.md  main.py  products.csv  pyproject.toml
Project DataWarehouse/data/bronze/: news.csv
Project DataWarehouse/scripts/: load.py  scraper.py
